--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,20 +36,22 @@
             android:id="@+id/scanButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/scan_qr_code" />
+            android:layout_weight="1"
+            android:text="@string/scan_qr_code"
+            style="?android:attr/buttonBarButtonStyle" />
 
         <Button
             android:id="@+id/saveButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:layout_weight="1"
             android:enabled="false"
-            android:text="@string/save" />
+            android:text="@string/save"
+            style="?android:attr/buttonBarButtonStyle" />
     </LinearLayout>
 
     <LinearLayout
@@ -58,11 +61,11 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/spinnerText"
+            android:id="@+id/spinnerFrequencyText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/select_frequency"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            android:text="@string/select_frequency" />
 
         <Spinner
             android:id="@+id/frequencySpinner"
@@ -72,7 +75,29 @@
             android:entries="@array/frequency_options"
             android:padding="8dp"
             android:prompt="@string/select_frequency" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/spinnerCategoryNameText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="@string/select_category" />
+
+        <Spinner
+            android:id="@+id/categoryNameSpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:entries="@array/category_name_options"
+            android:padding="8dp"
+            android:prompt="@string/category_name" />
     </LinearLayout>
 
     <!-- Button to start tracking -->
@@ -80,10 +105,10 @@
         android:id="@+id/trackingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_gravity="center"
-        android:padding="16dp"
+        android:layout_marginTop="16dp"
         android:enabled="false"
+        android:padding="16dp"
         android:text="@string/start_tracking" />
 
     <!-- Log area with ScrollView -->
@@ -92,12 +117,13 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_weight="1">
+
         <TextView
             android:id="@+id/textViewLog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:isScrollContainer="true"
             android:gravity="bottom"
+            android:isScrollContainer="true"
             android:text="@string/log_messages_will_appear_here"
             android:textSize="16sp" />
     </LinearLayout>
